trying to fix bug with images on safari

--- a/src/App.css
+++ b/src/App.css
@@ -148,9 +148,9 @@
 }
 
 .project img {
-  max-width: 40%;
+  max-width: 100%;
   border-radius: 1%;
-  max-height: 10%;
+  height: auto;
   margin-top: 3%;
 }
 
